--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "@types/node": "^22.13.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg-promise": "^11.10.2"
   }
